--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,12 @@
     -->
   </body>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
     body{
       margin:0;
       scroll-behavior: smooth;
-      font-family: cursive;
+      font-family: Indie Flower;
     }
   </style>
 </html>
